--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6878c504fc2c9922d5928016" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/calma-website.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/touch-optimizations.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>  <script type="module">   import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';    inject();  </script>
@@ -150,8 +151,8 @@
   <div class="page-wrapper">
     <section class="section page-hero">
       <div class="page-hero-content-wrapper">
-        <h1 class="page-hero-heading">عن كالـما</h1>
-        <div class="sub-heading hero">.نصنع ملامح الغد </div>
+        <h1 class="page-hero-heading">عن كالما</h1>
+        <div class="sub-heading hero">نصنع ملامح الغد.</div>
       </div>
       <div class="w-layout-blockcontainer container full hero w-container">
         <div class="section-hero-image-wrapper"><img src="images/About-Header.jpg" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/About-Header-p-500.jpg 500w, images/About-Header-p-800.jpg 800w, images/About-Header-p-1080.jpg 1080w, images/About-Header-p-1600.jpg 1600w, images/About-Header.jpg 1920w" class="image"></div>
@@ -164,7 +165,7 @@
             <p class="paragraph dark arabic">نطمح أن نكون قوة مؤثرة في مشهد التطوير العقاري بالمملكة العربية السعودية، حيث يلتقي التصميم المدروس بعناية بالرؤية الاستراتيجية في أماكن استثنائية  . نبني معالم عمرانية مستدامة تسهم في تشكيل مستقبل المملكة، نحول المساحات إلى قصص،ونخلق بيئات ملهمة تعكس شعور الانتماء والراحة</p>
           </div>
           <div class="heading-wrapper small">
-            <h2 class="section-heading dark arabic">نقود بهدف ونبني  برؤية مستقبلية </h2>
+            <h2 class="section-heading dark arabic">نقود بهدف ونبني برؤية مستقبلية.</h2>
           </div>
         </div>
       </div>
@@ -223,8 +224,8 @@
             <div class="ceo-name-wrapper arabic">
               <div class="ceo-logo-wrapper"><img src="images/BRANDMARK_2.png" loading="lazy" alt="" class="image"></div>
               <div>
-                <h3 class="ceo-name">مصعب المجيد</h3>
-                <h4 class="designation arabic">الرئيس التنفيذي | كَلْما</h4>
+                <h3 class="ceo-name">مصعب الماجد</h3>
+                <h4 class="designation arabic">رئيس مجلس إدارة كالما</h4>
               </div>
             </div>
           </div>
@@ -240,12 +241,12 @@
                 <div class="rich-text-block ceo arabic w-richtext">
                   <p class="paragraph dark">إلى شركائنا الكرام وسكان مشاريعنا القادمين</p>
                   <p class="paragraph dark ceo">عندما أسست كالما لم أطمح إلى بناء شركة تطوير عقاري تقليدية، بل سعيت إلى إحداث تغيير حقيقي في مفهوم إنشاء المساحات خصيصاً المساحات التي تُجسد رؤية، وتُطلق العنان للإمكانات.</p>
-                  <p class="paragraph dark ceo">اليوم وبينما نفخر بإنجاز ٢٨ مشروعاً ناجحًا في مدينتي الرياض و جدة   ، ندرك جيداً أن القيمة الحقيقية لا تُقاس بالأمتار بل بثقة أكثر من ٢٠٠٠ عائلة اختارت مشاريعنا موطنًا لها.</p>
+                  <p class="paragraph dark ceo">اليوم وبينما نفخر بإنجاز ٢٨ مشروعاً ناجحًا في مدينتي الرياض و جدة، ندرك جيداً أن القيمة الحقيقية لا تُقاس بالأمتار بل بثقة أكثر من ٢٠٠٠ عائلة اختارت مشاريعنا موطنًا لها.</p>
                   <p class="paragraph dark ceo">في كالما نضع الموثوقية في صميم كل مشروع، وكل موعد، وكل وعد. وهذا هو ما رسخ مكانتنا ودفعنا للتوسع بثبات في مختلف أنحاء المملكة.</p>
+                  <p class="paragraph dark ceo">نحن لا نبني مباني فحسب، بل نُعيد رسم أسلوب الحياة المدني مع دمج ممارسات الاستدامة التي تتماشى مع أهداف رؤية السعودية 2030. نبني مساحات يشعر فيها الجميع بالانتماء، وتزدهر فيها العائلات والأعمال.</p>
+                  <p class="paragraph dark ceo">كالما اليوم تمثل ذروة التميز العقاري، حيث تلتقي الرؤية الطموحة بأعلى المعايير. نحن لا نبني فقط، بل نرتقي بأنماط الحياة، ونرسم مستقبلًا يُلهم ويصمد.</p>
                 </div>
-                <p class="paragraph dark ceo arabic">نحن لا نبني مباني فحسب، بل نُعيد رسم أسلوب الحياة المدني مع دمج ممارسات الاستدامة التي تتماشى مع أهداف رؤية السعودية 2030. نبني مساحات يشعر فيها الجميع بالانتماء، وتزدهر فيها العائلات والأعمال.</p>
-                <p class="paragraph dark ceo arabic">كالما اليوم تمثل ذروة التميز العقاري، حيث تلتقي الرؤية الطموحة بأعلى المعايير. نحن لا نبني فقط، بل نرتقي بأنماط الحياة، ونرسم مستقبلًا يُلهم ويصمد.</p>
-                <p class="paragraph dark arabic">هذه هي كالما – التزام بالهدوء  ينبض بالحياة.</p>
+                <p class="paragraph dark arabic">هذه هي كالما – التزام بالهدوء ينبض بالحياة.</p>
               </div>
             </div>
           </div>
@@ -260,13 +261,13 @@
               <h5 class="section-name dark arabic">القيادة</h5>
             </div>
             <div class="center-align-heading-div">
-              <h2 class="section-heading dark center">.قيادة طموحة ومتقدمة</h2>
+              <h2 class="section-heading dark center">قيادة طموحة ومتقدمة.</h2>
             </div>
           </div>
           <div class="sub-heading-div arabic center">
-            <h4 class="sub-heading center">.نبني مجتمعات الغد</h4>
+            <h4 class="sub-heading center">نبني مجتمعات الغد.</h4>
             <div class="center-para-wrapper center wide arabic">
-              <p class="paragraph dark center">لا تقتصر القيادة في كالما على إنجاز المشاريع فقط بل تتمثل في الريادة بابتكار حلول معمارية  وتقنيات رقمية ترتقي بتجربة التطوير العقاري ككل. يعمل فريق كالما للقيادة بتجسيد التوازن المثالي بين الرؤية المستقبلية والتنفيذ العملي الدقيق.</p>
+              <p class="paragraph dark center">لا تقتصر القيادة في كالما على إنجاز المشاريع فقط بل تتمثل في الريادة بابتكار حلول معمارية وتقنيات رقمية ترتقي بتجربة التطوير العقاري ككل. يعمل فريق كالما للقيادة بتجسيد التوازن المثالي بين الرؤية المستقبلية والتنفيذ العملي الدقيق.</p>
             </div>
           </div>
         </div>
@@ -280,10 +281,10 @@
                   <div class="slider-content-div arabic-3">
                     <div class="slider-icon-div arabic-4"><img src="images/ELEVATING-MODERN-SAUDI-LIVING.png" loading="lazy" alt="" class="image arabic-5"></div>
                     <div class="sub-heading-div arabic-6">
-                      <h4 class="sub-heading arabic arabic-7">يجمع قادتنا بين خبرة عميقة في السوق ورؤية</h4>
+                      <h4 class="sub-heading arabic arabic-7">الارتقاء بأسلوب الحياة السعودي الحديث</h4>
                     </div>
                     <div class="slider-para-div arabic-8">
-                      <p class="paragraph dark arabic"> يجمع قادتنا بين خبرة عميقة في السوق ورؤية ابتكارية متقدمة لضمان أن تتجاوز كل مشاريعنا معايير اليوم، وتُمهّد لإمكانات الغد. ومع أكثر من  ٥٠٠ ألف متر مربعاً ، تسهم بفاعلية في رسم ملامح المشهد المدن السعودي الحديث.</p>
+                      <p class="paragraph dark arabic">يجمع قادتنا بين خبرة عميقة في السوق ورؤية ابتكارية متقدمة لضمان أن تتجاوز كل مشاريعنا معايير اليوم، وتُمهّد لإمكانات الغد. ومع أكثر من 500 ألف متر مربعاً، تسهم بفاعلية في رسم ملامح المشهد المدني السعودي الحديث.</p>
                     </div>
                   </div>
                 </div>
@@ -1309,6 +1310,7 @@
     });
   });
 </script>
+  <script src="js/touch-enhancements.js"></script>
   <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
 </body>
 </html>
