--- a/en/about.html
+++ b/en/about.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="688efc9659637860b9d3553e" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,7 @@
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/calma-website.webflow.css" rel="stylesheet" type="text/css">
+  <link href="../css/touch-optimizations.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script> <script type="module">   import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';   inject();  </script>
@@ -224,17 +225,17 @@
                 <h2 class="section-heading dark">CEO’s Message</h2>
               </div>
               <div class="sub-heading-div">
-                <h5 class="sub-heading left">Where 2,000 dreams find their address.</h5>
+                <h5 class="sub-heading left">WHERE 2,000 DREAMS FIND THEIR ADDRESS.</h5>
               </div>
               <div class="message-wrapper">
                 <div class="rich-text-block ceo w-richtext">
                   <p class="paragraph dark">Dear Valued Partners and Future Residents,</p>
-                  <p class="paragraph dark ceo"><br>When I founded CALMA, I envisioned more than just a real estate development company. I saw an opportunity to redefine what it means to create spaces that truly matter – spaces where vision takes shape and where potential flourishes.</p>
-                  <p class="paragraph dark ceo">Today, as I reflect on our journey of 28 successfully delivered projects across 3 cities, I&#x27;m reminded that our greatest achievement isn&#x27;t measured in square meters or construction milestones. It&#x27;s measured in the 2,000+ families who now call our developments home, and in the communities we&#x27;ve nurtured that transcend borders while honoring local traditions.</p>
+                  <p class="paragraph dark ceo">When I founded CALMA, I envisioned more than just a real estate development company. I saw an opportunity to redefine what it means to create spaces that truly matter – spaces where vision takes shape and where potential flourishes.</p>
+                  <p class="paragraph dark ceo">Today, as I reflect on our journey of 28 successfully delivered projects across the cities of Riyadh and Jeddah, I'm reminded that our greatest achievement isn't measured in square meters or construction milestones, but in the 2,000+ families who now call our developments home.</p>
                   <p class="paragraph dark ceo">At CALMA, our foundation is built on unwavering reliability and proven credibility. Every project, every deadline, every promise – delivered with precision and pride. This commitment to excellence has earned us the trust of people across Saudi Arabia, and it drives everything we do as we expand our footprint across the Kingdom.</p>
+                  <p class="paragraph dark ceo">Our approach goes beyond traditional construction. We're architecting the future of urban living, integrating cutting-edge sustainability practices that align with Saudi Vision 2030's environmental goals. From Riyadh to the wider Saudi Arabia, we're building spaces where global citizens feel at home, creating inclusive environments where families thrive and businesses prosper.</p>
+                  <p class="paragraph dark ceo">As we look toward the future, CALMA represents the pinnacle of real estate excellence, where visionary development meets uncompromising standards. We don't just build – we're elevating lifestyles and setting new benchmarks in luxury development that inspire and endure.</p>
                 </div>
-                <p class="paragraph dark ceo">Our approach goes beyond traditional construction. We&#x27;re architecting the future of urban living, integrating cutting-edge sustainability practices that align with Saudi Vision 2030&#x27;s environmental goals. From Riyadh to the wider Saudi Arabia, we&#x27;re building spaces where global citizens feel at home, creating inclusive environments where families thrive and businesses prosper.</p>
-                <p class="paragraph dark ceo">As we look toward the future, CALMA represents the pinnacle of real estate excellence, where visionary development meets uncompromising standards. We&#x27;re not just raising skylines – we&#x27;re elevating lifestyles and setting new benchmarks in luxury development that inspire and endure.</p>
                 <p class="paragraph dark">This is more than real estate; this is the future of refined living. This is CALMA – committed to your calm.</p>
               </div>
             </div>
@@ -245,7 +246,7 @@
               <div class="ceo-logo-wrapper"><img src="../images/BRANDMARK_2.png" loading="lazy" alt="" class="image"></div>
               <div>
                 <h3 class="ceo-name">Musab Al-Majed</h3>
-                <h4 class="designation arabic">Chief Executive Officer | CALMA</h4>
+                <h4 class="designation arabic">Chief Executive Officer, CALMA</h4>
               </div>
             </div>
           </div>
@@ -260,13 +261,13 @@
               <h5 class="section-name dark">leadership</h5>
             </div>
             <div class="center-align-heading-div">
-              <h2 class="section-heading dark center">Visionary &amp; progressive leadership.</h2>
+              <h2 class="section-heading dark center">VISIONARY & PROGRESSIVE LEADERSHIP.</h2>
             </div>
           </div>
           <div class="sub-heading-div">
-            <h4 class="sub-heading center">Building tomorrow&#x27;s communities today.</h4>
+            <h4 class="sub-heading center">BUILDING TOMORROW'S COMMUNITIES TODAY.</h4>
             <div class="center-para-wrapper center wide">
-              <p class="paragraph dark center">CALMA represents the pinnacle of real estate excellence, where visionary development meets uncompromising standards. Our portfolio of prestigious projects doesn&#x27;t just raise skylines – it elevates lifestyles. As we expand our footprint across the KSA, we&#x27;re setting new benchmarks in luxury development, creating landmarks that inspire and endure.</p>
+              <p class="paragraph dark center">At CALMA, leadership isn't just about guiding projects to completion – it's about pioneering architectural solutions and digital technologies that elevate the entire real estate development experience. Our leadership team embodies the perfect balance of visionary thinking and practical execution.</p>
             </div>
           </div>
         </div>
@@ -279,7 +280,7 @@
                 <source src="../videos/Leadership-card-video-transcode.webm" data-wf-ignore="true">
               </video>
               <div class="pattern-heading-div">
-                <h4 class="sub-heading white">Distinctive spaces with vision.</h4>
+                <h4 class="sub-heading white">DISTINCTIVE SPACES WITH VISION.</h4>
               </div>
               <div class="number-div">
                 <h2 class="section-heading number">04</h2>
@@ -297,10 +298,10 @@
                   <div class="slider-content-div">
                     <div class="slider-icon-div"><img src="../images/ELEVATING-MODERN-SAUDI-LIVING.png" loading="lazy" alt="" class="image"></div>
                     <div class="sub-heading-div">
-                      <h4 class="sub-heading arabic">Elevating modern Saudi living.</h4>
+                      <h4 class="sub-heading arabic">ELEVATING MODERN SAUDI LIVING</h4>
                     </div>
                     <div class="slider-para-div">
-                      <p class="paragraph dark">Our leaders combine deep market expertise with forward-thinking innovation, ensuring that every CALMA development not only meets today&#x27;s standards but defines tomorrow&#x27;s possibilities. With over 77,097 sqm of total land area and 130,000+ sqm of building area, we&#x27;re actively shaping Saudi Arabia&#x27;s urban landscape.</p>
+                      <p class="paragraph dark">Our leaders combine deep market expertise with forward-thinking innovation, ensuring that every CALMA development not only meets today's standards but defines tomorrow's possibilities. With over 77,097 sqm of total land area and 130,000+ sqm of building area, we're actively shaping Saudi Arabia's urban landscape.</p>
                     </div>
                   </div>
                 </div>
@@ -310,10 +311,10 @@
                   <div class="slider-content-div">
                     <div class="slider-icon-div"><img src="../images/DESIGNING-FUTURE-READY-LIVING-SPACES.png" loading="lazy" alt="" class="image"></div>
                     <div class="sub-heading-div">
-                      <h4 class="sub-heading arabic"> Designing Future-Ready Living Spaces</h4>
+                      <h4 class="sub-heading arabic">DESIGNING FUTURE-READY LIVING SPACES</h4>
                     </div>
                     <div class="slider-para-div">
-                      <p class="paragraph dark">Through strategic presence in key cities and diverse project portfolios, our leadership team maintains multi-sector expertise while inspiring new destinations. We&#x27;re not just following market trends – we&#x27;re creating them.</p>
+                      <p class="paragraph dark">Through strategic presence in key cities and diverse project portfolios, our leadership team maintains multi-sector expertise while inspiring new destinations. We're not just following market trends – we're creating them.</p>
                     </div>
                   </div>
                 </div>
@@ -323,7 +324,7 @@
                   <div class="slider-content-div">
                     <div class="slider-icon-div"><img src="../images/CRAFTING-DISTINCTIVE-SAUDI-HOMES.png" loading="lazy" alt="" class="image"></div>
                     <div class="sub-heading-div">
-                      <h4 class="sub-heading arabic">Crafting Distinctive Saudi Homes</h4>
+                      <h4 class="sub-heading arabic">CRAFTING DISTINCTIVE SAUDI HOMES</h4>
                     </div>
                     <div class="slider-para-div">
                       <p class="paragraph dark">With 700+ housing units delivered and diverse residential offerings, our leadership ensures that every development becomes a living destination where communities flourish and families find their perfect sanctuary.</p>
@@ -336,10 +337,10 @@
                   <div class="slider-content-div">
                     <div class="slider-icon-div"><img src="../images/THE-ART-OF-PURPOSEFUL-DESIGN.png" loading="lazy" alt="" class="image"></div>
                     <div class="sub-heading-div">
-                      <h4 class="sub-heading arabic">The Art Of Purposeful Design</h4>
+                      <h4 class="sub-heading arabic">THE ART OF PURPOSEFUL DESIGN</h4>
                     </div>
                     <div class="slider-para-div">
-                      <p class="paragraph dark">Our leadership team oversees 500,000 SQM of possibilities unfolding, ensuring that every CALMA development pulses with the energy of progress and possibility. From groundbreaking ceremonies to grand openings, we&#x27;re continuously advancing across Saudi Arabia and beyond. </p>
+                      <p class="paragraph dark">Our leadership team oversees 500,000 SQM of possibilities unfolding, ensuring that every CALMA development pulses with the energy of progress and possibility. From groundbreaking ceremonies to grand openings, we're continuously advancing across Saudi Arabia and beyond.</p>
                     </div>
                   </div>
                 </div>
@@ -373,7 +374,7 @@
                 <h3 class="sub-heading">Where sophistication finds its peace.</h3>
               </div>
               <div class="corpoorate-para-wrapper">
-                <p class="paragraph dark">CALMA&#x27;s corporate culture is built on the foundation that excellence isn&#x27;t just an outcome – it&#x27;s a way of being. Our culture transforms the real estate experience from mere development to a state of tranquility, where every team member contributes to creating spaces that inspire and endure.</p>
+                <p class="paragraph dark">CALMA's corporate culture is built on the foundation that excellence isn't just an outcome – it's a way of being. Our culture transforms the real estate experience from mere development to a state of tranquility, where every team member contributes to creating spaces that inspire and endure.</p>
               </div>
             </div>
           </div>
@@ -435,7 +436,7 @@
               </div>
               <div style="height:0px;-webkit-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="accordion-content---brix">
                 <div class="faq-paragraph-wrapper">
-                  <p class="accordion-paragraph---brix">Environmental consciousness and Vision 2030 alignment aren&#x27;t just corporate policies – they&#x27;re cultural values that guide our daily decisions. We&#x27;re committed to future-proof solutions and stewarding sustainable practices that benefit our communities.</p>
+                  <p class="accordion-paragraph---brix">Environmental consciousness and Vision 2030 alignment aren't just corporate policies – they're cultural values that guide our daily decisions. We're committed to future-proof solutions and stewarding sustainable practices that benefit our communities.</p>
                 </div>
                 <div class="faq-icon-wrapper"><img loading="lazy" src="../images/Responsible-stewardship-for-future-generations..png" alt=""></div>
               </div>
@@ -453,7 +454,7 @@
               </div>
               <div style="height:0px;-webkit-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="accordion-content---brix">
                 <div class="faq-paragraph-wrapper">
-                  <p class="accordion-paragraph---brix">At CALMA, we understand that creating landmarks that inspire and endure requires a culture that values both innovation and tradition. Our team operates with the understanding that we&#x27;re not just building properties – we&#x27;re creating the new standard in real estate excellence.</p>
+                  <p class="accordion-paragraph---brix">At CALMA, we understand that creating landmarks that inspire and endure requires a culture that values both innovation and tradition. Our team operates with the understanding that we're not just building properties – we're creating the new standard in real estate excellence.</p>
                 </div>
                 <div class="faq-icon-wrapper"><img loading="lazy" src="../images/Where-perfection-meets-timelessness..png" alt=""></div>
               </div>
@@ -552,7 +553,7 @@
                       <h4 class="sub-heading left">Responsible Stewardship</h4>
                     </div>
                     <div class="paragraph-wrapper">
-                      <p class="paragraph dark">Committing to environmentally conscious practices and resource efficiency in alignment with  Vision 2030&#x27;s environmental goals.</p>
+                      <p class="paragraph dark">Committing to environmentally conscious practices and resource efficiency in alignment with Vision 2030's environmental goals.</p>
                     </div>
                   </div>
                 </div>
@@ -1301,6 +1302,7 @@
     });
   });
 </script>
+  <script src="../js/touch-enhancements.js"></script>
   <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
 </body>
 </html>
